<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DomoWear</string>
    <string name="title_switches">Switches</string>
    <string name="title_scenes">Scenes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="pref_local_title">Local Settings</string>
    <string name="pref_remote_title">Remote Settings</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_url_title">URL</string>
    <string name="pref_port_title">Port</string>
    <string name="pref_secure_title">Use HTTPS ?</string>
    <string name="pref_authentication_method_title">Authentication Method</string>
    <string name="pref_local_wifi_title">Local Wifi SSID</string>
    <string name="pref_login_form">Login Form</string>
    <string name="pref_basic_auth">Basic Auth</string>
    <string name="pref_authentication_method_login_form">login_form</string>
    <string name="pref_authentication_method_basic_auth">basic_auth</string>
    <string name="toast_remote_url">You are not connected to your local network, you need to setup your remote url to be able to use the app.</string>
    <string name="error_title">An error happen</string>
    <string name="error_list_message">Can\'t retrieve the switches list, maybe your server is down ?</string>

</resources>
