<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_local_title">
        <EditTextPreference
            android:key="pref_local_username"
            android:title="@string/pref_username_title"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="pref_local_password"
            android:title="@string/pref_password_title"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="pref_local_url"
            android:title="@string/pref_url_title"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="pref_local_port"
            android:title="@string/pref_port_title"
            android:defaultValue=""/>
        <CheckBoxPreference
            android:key="pref_local_secure"
            android:title="@string/pref_secure_title"
            android:defaultValue="false"/>
        <ListPreference
            android:key="pref_local_authentication_method"
            android:title="@string/pref_authentication_method_title"
            android:dialogTitle="@string/pref_authentication_method_title"
            android:entries="@array/pref_authentication_method_entries"
            android:entryValues="@array/pref_authentication_method_values"
            android:defaultValue="@string/pref_authentication_method_login_form" />
        <EditTextPreference
            android:key="pref_local_wifi"
            android:title="@string/pref_local_wifi_title"
            android:defaultValue=""/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_remote_title">
        <EditTextPreference
            android:key="pref_remote_username"
            android:title="@string/pref_username_title"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="pref_remote_password"
            android:title="@string/pref_password_title"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="pref_remote_url"
            android:title="@string/pref_url_title"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="pref_remote_port"
            android:title="@string/pref_port_title"
            android:defaultValue=""/>
        <CheckBoxPreference
            android:key="pref_remote_secure"
            android:title="@string/pref_secure_title"
            android:defaultValue="true"/>
        <ListPreference
            android:key="pref_remote_authentication_method"
            android:title="@string/pref_authentication_method_title"
            android:dialogTitle="@string/pref_authentication_method_title"
            android:entries="@array/pref_authentication_method_entries"
            android:entryValues="@array/pref_authentication_method_values"
            android:defaultValue="@string/pref_authentication_method_login_form" />
    </PreferenceCategory>
</PreferenceScreen>